[package]
authors = ["Virto Network <we@virto.team>"]
edition = '2021'
name = "orml-payments"
version = "0.7.0"
license = "Apache-2.0"
homepage = "https://github.com/virto-network/virto-node"
repository = "https://github.com/virto-network/virto-node"
description = "Allows users to post escrow payment on-chain"
readme = "README.md"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-traits = {path = "../traits", version = "0.7.0", default-features = false }

[dev-dependencies]
serde = "1.0.136"

sp-core = { workspace = true }
sp-io = { workspace = true }

orml-tokens = { path = "../tokens" }

[features]
default = [ 'std' ]
std = [
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'orml-traits/std',
	'parity-scale-codec/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
