[package]
name = "orml-prices"
version = "0.1.0"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }

palette-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
palette-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }

orml-traits = { path = "../traits", default-features = false }
orml-utilities = { path = "../utilities", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"runtime_io/std",
	"sr-primitives/std",
	"palette-support/std",
	"palette-system/std",
	"orml-traits/std",
	"orml-utilities/std",
]
