[package]
name = "orml-prices"
description = "Provide basic asset price abstraction."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/prices"
license = "Apache-2.0"
version = "0.1.3-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
sp-runtime = { version = "2.0.0-rc3", default-features = false }
sp-std = { version = "2.0.0-rc3", default-features = false }
frame-support = { version = "2.0.0-rc3", default-features = false }
orml-traits = { path = "../traits", version = "0.1.3-dev", default-features = false }

[dev-dependencies]
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"orml-traits/std",
]
