[package]
name = "orml-schedule-update"
version = "0.0.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

frame-support = { version = "2.0.0-alpha.5", default-features = false }
frame-system = { version = "2.0.0-alpha.5", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-alpha.5", default-features = false }
sp-core = { version = "2.0.0-alpha.5", default-features = false }
pallet-balances = { version = "2.0.0-alpha.5", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
]
