[package]
name = "orml-schedule-update"
description = "Provides way to schedule a call to be dispatched at later block."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/schedule-update"
license = "Apache-2.0"
version = "0.1.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

frame-support = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }
sp-std = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
orml-traits = { path = "../traits", version = "0.1.1", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
pallet-balances = "2.0.0-rc2"

clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
	"orml-traits/std",
]
